--- a/1-classification.ipynb
+++ b/1-classification.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification par plus proches voisins"
+    "# Classification par plus proches voisins\n",
+    "\n",
+    "Ce notebook présente la classification de données par la recherche des plus proches voisins."
    ]
   },
   {
