--- a/2-arbres.ipynb
+++ b/2-arbres.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Arbres k-dimensionnels"
+    "# Arbres k-dimensionnels\n",
+    "\n",
+    "Ce notebook présente la recherche arborescente des plus proches voisins."
    ]
   },
   {
@@ -30,9 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Données\n",
-    "\n",
-    "Quelques jeux de données à classifier."
+    "## Données"
    ]
   },
   {
@@ -186,6 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# descriptif\n",
     "print(covertype.DESCR)"
    ]
   },
@@ -289,10 +290,10 @@
    "outputs": [],
    "source": [
     "class ArbreBoule:\n",
-    "    '''Arbre boule. Chaque noeud contient l'index des échantillons qu'il contient, le centre et le rayon.'''\n",
-    "    def __init__(self, index, ancetre):\n",
-    "        self.index = index\n",
+    "    '''Arbre boule. Chaque noeud (sauf les feuilles) contient le centre et le rayon de la boule.'''\n",
+    "    def __init__(self, ancetre):\n",
     "        self.ancetre = ancetre\n",
+    "        self.index = None\n",
     "        self.centre = None\n",
     "        self.rayon = None\n",
     "        self.gauche = None\n",
@@ -310,8 +311,9 @@
     "    n_echantillons, n_dimensions = X_app.shape\n",
     "    if profondeur == 0:\n",
     "        index = np.arange(n_echantillons)\n",
-    "    arbre = ArbreBoule(index, ancetre)\n",
+    "    arbre = ArbreBoule(ancetre)\n",
     "    if len(index) > taille_min:\n",
+    "        # on divise la feuille\n",
     "        axe = profondeur % n_dimensions\n",
     "        median = len(index) // 2\n",
     "        index_median = index[np.argpartition(X_app[index, axe], median)]\n",
@@ -322,6 +324,8 @@
     "        arbre.rayon = np.max(np.linalg.norm(X_app[index] - X_app[centre], axis=1))\n",
     "        arbre.gauche = construire_arbre(X_app, profondeur + 1, index_gauche, arbre, taille_min)\n",
     "        arbre.droit = construire_arbre(X_app, profondeur + 1, index_droit, arbre, taille_min)\n",
+    "    else:\n",
+    "        arbre.index = index\n",
     "    return arbre"
    ]
   },
@@ -658,7 +662,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "echantillons = np.random.choice(len(X_test), size=100, replace=False)"
+    "def obtenir_echantillons(X, y, n_echantillons=10):\n",
+    "    '''Donne une sélection aléatoire d'échantillons pour chaque classe.'''\n",
+    "    index = []\n",
+    "    for label in np.unique(y):\n",
+    "        index_label = np.where(y == label)[0]\n",
+    "        replace = len(index_label) > n_echantillons\n",
+    "        index += list(np.random.choice(index_label, size=n_echantillons, replace=replace))\n",
+    "    return index"
    ]
   },
   {
@@ -667,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = classifier_plus_proches_voisins(X_test[echantillons], X_app, y_app, arbre)"
+    "index = obtenir_echantillons(X_test, y_test, 10) "
    ]
   },
   {
@@ -676,7 +687,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "precision = np.sum(y_pred == y_test[echantillons]) / len(echantillons)"
+    "y_pred = classifier_plus_proches_voisins(X_test[index], X_app, y_app, arbre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision = np.sum(y_pred == y_test[index]) / len(index)"
    ]
   },
   {
