--- a/2-arbres.ipynb
+++ b/2-arbres.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Arbres k-dimensionnels\n",
+    "# Arbres multi-dimensionnels\n",
     "\n",
-    "Ce notebook présente la recherche arborescente des plus proches voisins."
+    "Ce notebook présente la recherche arborescente multi-dimensionnelle de plus proches voisins."
    ]
   },
   {
