--- a/1-classification.ipynb
+++ b/1-classification.ipynb
@@ -378,16 +378,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def partager_apprentissage_test(X, y, ratio_test=0.2):\n",
-    "    '''Partage un jeu de données entre apprentissage et test. La repartition entre classes est conservee.'''\n",
+    "    '''Partage un jeu de données entre apprentissage et test. \n",
+    "    La répartition entre classes est conservée.'''\n",
     "    index = []\n",
     "    for label in np.unique(y):\n",
     "        index_label = np.where(y==label)[0]\n",
-    "        index += list(np.random.choice(index_label, int(ratio_test * len(index_label)), replace=False))\n",
+    "        size = int(ratio_test * len(index_label))\n",
+    "        replace = size < len(index_label)\n",
+    "        index += list(np.random.choice(index_label, size=size, replace=replace))\n",
     "    X_test = X[index]\n",
     "    y_test = y[index]\n",
     "    index_ = np.ones(len(y), dtype=bool)\n",
@@ -467,7 +470,8 @@
    "outputs": [],
    "source": [
     "def rechercher_plus_proches_voisins(X_test, X_app, n_voisins=3):\n",
-    "    '''Recherche des plus proches voisins. Retourne une matrice de taille (n_test, n_voisins).'''\n",
+    "    '''Recherche des plus proches voisins. \n",
+    "    Retourne une matrice de taille (n_test, n_voisins).'''\n",
     "    voisins = []\n",
     "    for x in X_test:\n",
     "        distances = np.linalg.norm(X_app - x, axis=1)\n",
@@ -482,7 +486,8 @@
    "outputs": [],
    "source": [
     "def classifier_plus_proches_voisins(X_test, X_app, y_app, n_voisins=3):\n",
-    "    '''Classification par plus proches voisins. Retourne la classe majoritaire.'''\n",
+    "    '''Classification par plus proches voisins. \n",
+    "    Retourne la classe majoritaire.'''\n",
     "    y_pred = []\n",
     "    for x in X_test:\n",
     "        distances = np.linalg.norm(X_app - x, axis=1)\n",
@@ -768,11 +773,11 @@
    "source": [
     "## Quelques idées à explorer\n",
     "\n",
-    "Pour l'ensemble des jeux de données :\n",
+    "\n",
+    "Pour un jeu de données de votre choix :\n",
     "* Étudier l'impact du nombre de plus proches voisins.\n",
     "* Étudier la sensibilité au bruit (en perturbant les classes du jeu d'apprentissage).\n",
-    "* Retourner un score de confiance (fraction des voisins de classe majoritaire).\n",
-    "* Introduire une pondération permettant de donner plus de poids aux voisins les plus proches.\n",
+    "* Retourner un score de confiance (fraction des voisins de la classe prédite).\n",
     "\n",
     "Pour le disque :\n",
     "* Montrer les points les plus difficiles à classer.\n",
@@ -784,7 +789,11 @@
     "\n",
     "Pour les chiffres :\n",
     "* Montrer les chiffres les plus faciles à classer puis les plus difficiles à classer.\n",
-    "* Tester une méthode d'égalisation des images (par exemple, somme des niveaux de gris constante)."
+    "* Tester une méthode d'égalisation des images (par exemple, somme des niveaux de gris constante).\n",
+    "\n",
+    "Pour aller plus loin :\n",
+    "* Introduire une pondération permettant de donner plus de poids aux voisins les plus proches.\n",
+    "* Tester cette technique pour différentes pondérations, et sa résistance au bruit."
    ]
   }
  ],
