--- a/2-arbres.ipynb
+++ b/2-arbres.ipynb
@@ -127,127 +127,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forêt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "covertype = fetch_openml(\"covertype\", version=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def obtenir_foret():\n",
-    "    '''Jeu de donnees Forêt (caratéristiques numériques).'''    \n",
-    "    X = covertype.data[:, :10]\n",
-    "    y = covertype.target.astype(int)\n",
-    "    return X, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, y = obtenir_foret()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# noms des caracteristiques\n",
-    "covertype.feature_names[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# descriptif\n",
-    "print(covertype.DESCR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def montrer_foret(X, y, dimensions=[0,1], nombre=200):\n",
-    "    plt.figure(figsize=(4,4))\n",
-    "    index = np.random.choice(len(y), size=nombre, replace=False) \n",
-    "    X_ = X[index]\n",
-    "    y_ = y[index]\n",
-    "    for label in np.unique(y):\n",
-    "        plt.scatter(X_[y_==label, dimensions[0]], X_[y_==label, dimensions[1]])\n",
-    "    plt.xlim(-0.1, 1.1)\n",
-    "    plt.ylim(-0.1, 1.1)\n",
-    "    plt.xlabel(covertype.feature_names[dimensions[0]])\n",
-    "    plt.ylabel(covertype.feature_names[dimensions[1]])\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "montrer_foret(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def montrer_classes(y):\n",
-    "    n_classes = len(np.unique(y))\n",
-    "    plt.figure(figsize=(n_classes,2))\n",
-    "    plt.hist(y, bins=5*n_classes, color='k')\n",
-    "    plt.xlabel('Classe')\n",
-    "    plt.ylabel('Nombre')\n",
-    "    plt.xticks(np.unique(y))\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "montrer_classes(y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Partage apprentissage / test\n",
     "\n",
     "Partage d'un jeu de données entre apprentissage et test.  "
@@ -260,11 +139,14 @@
    "outputs": [],
    "source": [
     "def partager_apprentissage_test(X, y, ratio_test=0.2):\n",
-    "    '''Partage un jeu de données entre apprentissage et test. La répartition entre classes est conservée.'''\n",
+    "    '''Partage un jeu de données entre apprentissage et test. \n",
+    "    La repartition entre classes est conservee.'''\n",
     "    index = []\n",
     "    for label in np.unique(y):\n",
     "        index_label = np.where(y==label)[0]\n",
-    "        index += list(np.random.choice(index_label, int(ratio_test * len(index_label)), replace=False))\n",
+    "        size = int(ratio_test * len(index_label))\n",
+    "        replace = size < len(index_label)\n",
+    "        index += list(np.random.choice(index_label, size=size, replace=replace))\n",
     "    X_test = X[index]\n",
     "    y_test = y[index]\n",
     "    index_ = np.ones(len(y), dtype=bool)\n",
@@ -396,7 +278,8 @@
    "outputs": [],
    "source": [
     "def rechercher_plus_proches_voisins(X_test, X_app, arbre):\n",
-    "    '''Recherche récursive des plus proches voisins. Retourne un vecteur de taille n_test.'''\n",
+    "    '''Recherche récursive des plus proches voisins. \n",
+    "    Retourne un vecteur de taille n_test.'''\n",
     "    voisins = []\n",
     "    for x_test in X_test:\n",
     "        voisin, _ = rechercher_plus_proche_voisin(x_test, X_app, arbre)\n",
@@ -411,7 +294,8 @@
    "outputs": [],
    "source": [
     "def classifier_plus_proches_voisins(X_test, X_app, y_app, arbre):\n",
-    "    '''Classifier par le plus proche voisin. Retourne un vecteur de taille n_test.'''\n",
+    "    '''Classifier par le plus proche voisin. \n",
+    "    Retourne un vecteur de taille n_test.'''\n",
     "    voisins = rechercher_plus_proches_voisins(X_test, X_app, arbre)    \n",
     "    return y_app[voisins]"
    ]
@@ -611,92 +495,6 @@
    "outputs": [],
    "source": [
     "precision = np.sum(y_pred == y_test) / len(y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.round(precision, 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Forêt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, y = obtenir_foret()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_app, X_test, y_app, y_test = partager_apprentissage_test(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arbre = construire_arbre(X_app)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def obtenir_echantillons(X, y, n_echantillons=10):\n",
-    "    '''Donne une sélection aléatoire d'échantillons pour chaque classe.'''\n",
-    "    index = []\n",
-    "    for label in np.unique(y):\n",
-    "        index_label = np.where(y == label)[0]\n",
-    "        replace = len(index_label) > n_echantillons\n",
-    "        index += list(np.random.choice(index_label, size=n_echantillons, replace=replace))\n",
-    "    return index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = obtenir_echantillons(X_test, y_test, 10) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = classifier_plus_proches_voisins(X_test[index], X_app, y_app, arbre)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "precision = np.sum(y_pred == y_test[index]) / len(index)"
    ]
   },
   {
