--- a/1-classification.ipynb
+++ b/1-classification.ipynb
@@ -91,6 +91,7 @@
    "outputs": [],
    "source": [
     "def montrer_disque(X, y):\n",
+    "    '''Montre les échantillons avec le disque.'''\n",
     "    plt.figure(figsize=(4,4))\n",
     "    plt.xlim(-1.1, 1.1)\n",
     "    plt.ylim(-1.1, 1.1)\n",
@@ -119,6 +120,7 @@
    "outputs": [],
    "source": [
     "def montrer_classes(y):\n",
+    "    '''Montre l'histogramme des classes.'''\n",
     "    n_classes = len(np.unique(y))\n",
     "    plt.figure(figsize=(n_classes,2))\n",
     "    plt.hist(y, bins=5*n_classes, color='k')\n",
@@ -220,6 +222,7 @@
    "outputs": [],
    "source": [
     "def montrer_iris(X, y, dimensions=[0,1]):\n",
+    "    '''Montre les données Iris selon les dimensions choisies.'''        \n",
     "    plt.figure(figsize=(4,4))\n",
     "    for label in np.unique(y):\n",
     "        plt.scatter(X[y==label, dimensions[0]], X[y==label, dimensions[1]], label=iris.target_names[label])\n",
@@ -319,7 +322,7 @@
    "outputs": [],
    "source": [
     "def montrer_chiffres(X, y, limit_max=10):\n",
-    "    '''Montre une sélection de chiffres.'''\n",
+    "    '''Montre des chiffres.'''\n",
     "    labels, nombres = np.unique(y, return_counts=True)\n",
     "    nombre_max = min(np.max(nombres), limit_max)\n",
     "    img = np.zeros((100, nombre_max*10))\n",
