--- a/4-hierarchie.ipynb
+++ b/4-hierarchie.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Partitionnement de données\n",
+    "# Structure hiérarchique\n",
     "\n",
-    "Ce notebook présente le partitionnement de données par l'algorithme des $k$-moyennes."
+    "Ce notebook présente des techniques d'analyse de la structure hiérarchique de données par un algorithme agglomératif."
    ]
   },
   {
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.cluster.hierarchy import dendrogram, cut_tree, linkage"
    ]
   },
   {
@@ -58,7 +59,7 @@
    "outputs": [],
    "source": [
     "def obtenir_iris():\n",
-    "    '''Jeu de données Iris.'''    \n",
+    "    '''Jeu de donnees Iris.'''    \n",
     "    X = iris.data\n",
     "    y = iris.target\n",
     "    return X, y"
@@ -134,70 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Algorithme des k-moyennes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initialiser_centres(X, n_clusters):\n",
-    "    '''Initialise les centres des clusters de façon aléatoire.'''\n",
-    "    replace = n_clusters < len(X)\n",
-    "    index = np.random.choice(len(X), size=n_clusters, replace=replace)\n",
-    "    centres = X[index]\n",
-    "    return centres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def trouver_clusters(X, centres):\n",
-    "    '''Trouve les clusters à partir des centres (en fonction des distances).'''\n",
-    "    distances = []\n",
-    "    for x in centres:\n",
-    "        distances.append(np.linalg.norm(X - x, axis=1))\n",
-    "    distances = np.array(distances)\n",
-    "    y = np.argmin(distances, axis=0)\n",
-    "    return y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def trouver_centres(X, y):\n",
-    "    '''Trouve les centres à partir des clusters (indiqués par les labels).'''\n",
-    "    centres = []\n",
-    "    for label in np.unique(y):\n",
-    "        centre = np.mean(X[y==label], axis=0)\n",
-    "        centres.append(centre)\n",
-    "    return np.array(centres)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def partitionner(X, n_clusters):\n",
-    "    '''Partitionne les données par l'algorithme des k-moyennes.'''\n",
-    "    centres = initialiser_centres(X, n_clusters)\n",
-    "    y = trouver_clusters(X, centres)\n",
-    "    y_prev = None\n",
-    "    while not np.all(y == y_prev):\n",
-    "        y_prev = y.copy()\n",
-    "        centres = trouver_centres(X, y)\n",
-    "        y = trouver_clusters(X, centres)\n",
-    "    return y"
+    "## Regroupement hiérarchique"
    ]
   },
   {
@@ -215,7 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "centres = initialiser_centres(X, 3)"
+    "# dendrogram\n",
+    "Z = linkage(X, method='ward')"
    ]
   },
   {
@@ -224,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = trouver_clusters(X, centres)"
+    "Z.shape"
    ]
   },
   {
@@ -233,7 +172,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "centres = trouver_centres(X, y)"
+    "plt.figure(figsize = (10, 5))\n",
+    "dendrogram(Z, no_labels=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coupes d'un dendrogramme"
    ]
   },
   {
@@ -242,7 +190,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = partitionner(X, 3)"
+    "def trouver_coupe(Z, n_clusters):\n",
+    "    '''Partitionne les données en clusters par une coupe du dendrogramme.'''\n",
+    "    y_pred = cut_tree(Z, [n_clusters]).ravel()\n",
+    "    return y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = trouver_coupe(Z, 3)"
    ]
   },
   {
@@ -269,21 +229,21 @@
    "source": [
     "## Quelques idées à explorer\n",
     "\n",
-    "Sur l'algorithme des $k$-moyennes :\n",
-    "* Coder et tester un algorithme de partitionnement retournant la meilleure de $N$ instances indépendantes des $k$-moyennes (par exemple, $N=100$).\n",
-    "* Proposer, coder et tester un autre critère d'arrêt (par exemple, basé sur les positions des centres des clusters). <br> Quel en serait l'avantage ?\n",
-    "* Coder et tester l'algorithme des [k-moyennes++](https://fr.wikipedia.org/wiki/K-moyennes#Initialisation).\n",
+    "Pour un jeu de données de votre choix :\n",
+    "* Tester les autres méthodes de regroupement (voir la documentation de ``linkage``).\n",
+    "* Donner la suite des centres des clusters obtenus par un parcours du dendrogramme depuis une feuille de l'arbre.\n",
     "\n",
     "Pour Iris :\n",
-    "* Montrer le [diagramme de Voronoi](https://fr.wikipedia.org/wiki/Diagramme_de_Voronoï) associé aux centres des clusters (par exemple sur la forme du pétale, pour une fleur de dimensions de sépale médianes), pour différentes valeurs de $k$ (par exemple, 2, 3, 4, 5).\n",
+    "* Montrer la suite des cellules de Voronoi d'un échantillon donné (par exemple sur la forme du pétale, pour une fleur de dimensions de sépale médianes), en parcourant l'arbre de la feuille associée à la racine.\n",
     "\n",
     "Pour les chiffres :\n",
-    "* Montrer 10 représentants de chaque cluster, pour différentes valeurs de $k$ (par exemple 4, 8, 10, 12).\n",
-    "* Montrer l'image du centre de chaque cluster, pour différentes valeurs de $k$.\n",
+    "* Montrer la suite des images associées aux centres des clusters obtenus par un parcours du dendrogramme depuis une feuille de l'arbre.\n",
     "\n",
     "Pour aller plus loin :\n",
-    "* Proposer une méthode pour comparer les clusters trouvés aux vraies classes.\n",
-    "* Tester une forme d'[apprentissage actif](https://fr.wikipedia.org/wiki/Apprentissage_actif) consistant à ne révéler les classes que des échantillons les plus proches des centres des clusters (par exemple, 5\\% des échantillons) et à classifier les autres échantillons par un algorithme des plus proches voisins."
+    "\n",
+    "* Coder son propre algorithme de coupe d'un dendrogramme, puis donner le dendrogramme coupé, chaque feuille de ce dendrogramme correspondant à l'un des clusters trouvés.\n",
+    "* Proposer et tester une méthode donnant les $k$ meilleures coupes d'un dendrogramme (par exemple, celles correspondant aux plus grands écarts de hauteur).\n",
+    "* Coder et tester son propre algorithme agglomératif, d'abord avec une recherche exhaustive des plus proches voisins, plus par l'algorithme de la [chaîne des plus proches voisins](https://en.wikipedia.org/wiki/Nearest-neighbor_chain_algorithm). \n"
    ]
   }
  ],
