--- a/2-arbres.ipynb
+++ b/2-arbres.ipynb
@@ -62,6 +62,7 @@
    "outputs": [],
    "source": [
     "def montrer_disque(X, y):\n",
+    "    '''Montre les échantillons avec le disque.'''\n",
     "    plt.figure(figsize=(4,4))\n",
     "    plt.xlim(-1.1, 1.1)\n",
     "    plt.ylim(-1.1, 1.1)\n",
@@ -110,7 +111,7 @@
    "outputs": [],
    "source": [
     "def montrer_chiffres(X, y, limit_max=10):\n",
-    "    '''Montre une sélection de chiffres.'''\n",
+    "    '''Montre des chiffres.'''\n",
     "    labels, nombres = np.unique(y, return_counts=True)\n",
     "    nombre_max = min(np.max(nombres), limit_max)\n",
     "    img = np.zeros((100, nombre_max*10))\n",
