--- a/1-classification.ipynb
+++ b/1-classification.ipynb
@@ -777,7 +777,7 @@
     "## Quelques idées à explorer\n",
     "\n",
     "\n",
-    "Pour un jeu de données de votre choix :\n",
+    "Pour l'un de ces jeux de données (ou un autre de votre choix) :\n",
     "* Étudier l'impact du nombre de plus proches voisins.\n",
     "* Étudier la sensibilité au bruit (en perturbant les classes du jeu d'apprentissage).\n",
     "* Retourner un score de confiance (fraction des voisins de la classe prédite).\n",
