--- a/2-arbres.ipynb
+++ b/2-arbres.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Arbres multi-dimensionnels\n",
+    "# Arbres k-dimensionnels\n",
     "\n",
-    "Ce notebook présente la recherche arborescente multi-dimensionnelle de plus proches voisins."
+    "Ce notebook présente la recherche arborescente de plus proches voisins en dimension quelconque."
    ]
   },
   {
@@ -128,9 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Partage apprentissage / test\n",
-    "\n",
-    "Partage d'un jeu de données entre apprentissage et test.  "
+    "## Partage apprentissage / test"
    ]
   },
   {
@@ -515,7 +513,7 @@
     "\n",
     "* Étendre la recherche aux $k$ plus proches voisins.\n",
     "* Donner la fraction des échantillons explorés pour une recherche.\n",
-    "* Coder un arbre avec exploration opportuniste des axes et non cyclique ; par exemple, chaque coupe se fait sur l'axe de plus grande étendue (max - min des échantillons sur cet axe)."
+    "* Coder un arbre avec exploration opportuniste des axes (et non cyclique comme dans le code actuel) ; par exemple, chaque coupe se fait sur l'axe de plus grande étendue (max - min des échantillons sur cet axe)."
    ]
   }
  ],
