--- a/3-partitionnement.ipynb
+++ b/3-partitionnement.ipynb
@@ -282,7 +282,7 @@
     "* Montrer l'image du centre de chaque cluster, pour différentes valeurs de $k$.\n",
     "\n",
     "Pour aller plus loin :\n",
-    "* Proposer une méthode pour comparer les clusters trouvés aux vraies classes.\n",
+    "* Proposer et coder une méthode pour comparer les clusters trouvés aux vraies classes.\n",
     "* Tester une forme d'[apprentissage actif](https://fr.wikipedia.org/wiki/Apprentissage_actif) consistant à ne révéler les classes que des échantillons les plus proches des centres des clusters (par exemple, 5\\% des échantillons) et à classifier les autres échantillons par un algorithme des plus proches voisins."
    ]
   }
