--- a/4-hierarchie.ipynb
+++ b/4-hierarchie.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Structure hiérarchique\n",
     "\n",
-    "Ce notebook présente des techniques d'analyse de la structure hiérarchique de données par un algorithme agglomératif."
+    "Ce notebook présente l'analyse de la structure hiérarchique de données par un algorithme agglomératif."
    ]
   },
   {
@@ -229,7 +229,7 @@
    "source": [
     "## Quelques idées à explorer\n",
     "\n",
-    "Pour un jeu de données de votre choix :\n",
+    "Pour l'un de ces jeux de données (ou un autre de votre choix) :\n",
     "* Tester les autres méthodes de regroupement (voir la documentation de ``linkage``).\n",
     "* Donner la suite des centres des clusters obtenus par un parcours du dendrogramme depuis une feuille de l'arbre.\n",
     "\n",
