--- a/test.ipynb
+++ b/test.ipynb
@@ -23,11 +23,11 @@
     "\n",
     "Il peut être nécessaire de les installer, par exemple via [pip](https://docs.python.org/fr/3.6/installing/index.html) en exécutant dans un terminal la commande suivante :\n",
     "\n",
-    "``pip install numpy matplotlib scipy sklearn``\n",
+    "``pip install numpy matplotlib scipy scikit-learn``\n",
     "\n",
     "ou :\n",
     "\n",
-    "``pip3 install numpy matplotlib scipy sklearn``"
+    "``pip3 install numpy matplotlib scipy scikit-learn``"
    ]
   },
   {
