--- a/1-classification.ipynb
+++ b/1-classification.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## Données\n",
     "\n",
-    "Quelques jeux de données à classifier."
+    "Quelques jeux de données à classifier.\n"
    ]
   },
   {
@@ -78,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "np.unique(y)"
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,8 +394,7 @@
     "    for label in np.unique(y):\n",
     "        index_label = np.where(y==label)[0]\n",
     "        size = int(ratio_test * len(index_label))\n",
-    "        replace = size < len(index_label)\n",
-    "        index += list(np.random.choice(index_label, size=size, replace=replace))\n",
+    "        index += list(np.random.choice(index_label, size=size, replace=False))\n",
     "    X_test = X[index]\n",
     "    y_test = y[index]\n",
     "    index_ = np.ones(len(y), dtype=bool)\n",
@@ -478,6 +479,7 @@
     "    voisins = []\n",
     "    for x in X_test:\n",
     "        distances = np.linalg.norm(X_app - x, axis=1)\n",
+    "        #voisins.append(np.argsort(distances)[:n_voisins])\n",
     "        voisins.append(np.argpartition(distances, n_voisins)[:n_voisins])\n",
     "    return np.array(voisins)"
    ]
@@ -514,7 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_app, y_app = obtenir_disque()"
+    "X_app, y_app = obtenir_disque(200)"
    ]
   },
   {
@@ -534,7 +536,7 @@
    "source": [
     "# centre du carre / sommets du carre\n",
     "X_test = np.array([[0, 0], [1, 1], [-1, 1], [1, -1], [-1, -1]])\n",
-    "voisins = rechercher_plus_proches_voisins(X_test, X_app)"
+    "voisins = rechercher_plus_proches_voisins(X_test, X_app, 3)"
    ]
   },
   {
@@ -553,7 +555,7 @@
    "outputs": [],
    "source": [
     "# classification\n",
-    "y_pred = classifier_plus_proches_voisins(X_test, X_app, y_app)"
+    "y_pred = classifier_plus_proches_voisins(X_test, X_app, y_app, 3)"
    ]
   },
   {
