--- a/3-partitionnement.ipynb
+++ b/3-partitionnement.ipynb
@@ -74,10 +74,9 @@
     "    '''Montre les données Iris selon les dimensions choisies.'''        \n",
     "    plt.figure(figsize=(4,4))\n",
     "    for label in np.unique(y):\n",
-    "        plt.scatter(X[y==label, dimensions[0]], X[y==label, dimensions[1]], label=iris.target_names[label])\n",
+    "        plt.scatter(X[y==label, dimensions[0]], X[y==label, dimensions[1]])\n",
     "    plt.xlabel(iris.feature_names[dimensions[0]])\n",
     "    plt.ylabel(iris.feature_names[dimensions[1]])\n",
-    "    plt.legend()\n",
     "    plt.show()"
    ]
   },
@@ -144,9 +143,9 @@
    "outputs": [],
    "source": [
     "def initialiser_centres(X, n_clusters):\n",
-    "    '''Initialise les centres des clusters de façon aléatoire.'''\n",
-    "    replace = n_clusters < len(X)\n",
-    "    index = np.random.choice(len(X), size=n_clusters, replace=replace)\n",
+    "    '''Initialise les centres des clusters de façon aléatoire.\n",
+    "    Le paramètre n_clusters ne peut excéder len(X).'''\n",
+    "    index = np.random.choice(len(X), size=n_clusters, replace=False)\n",
     "    centres = X[index]\n",
     "    return centres"
    ]
@@ -248,7 +247,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "montrer_iris(X, y_pred)"
