--- a/4-hierarchie.ipynb
+++ b/4-hierarchie.ipynb
@@ -75,10 +75,9 @@
     "    '''Montre les données Iris selon les dimensions choisies.'''        \n",
     "    plt.figure(figsize=(4,4))\n",
     "    for label in np.unique(y):\n",
-    "        plt.scatter(X[y==label, dimensions[0]], X[y==label, dimensions[1]], label=iris.target_names[label])\n",
+    "        plt.scatter(X[y==label, dimensions[0]], X[y==label, dimensions[1]])\n",
     "    plt.xlabel(iris.feature_names[dimensions[0]])\n",
     "    plt.ylabel(iris.feature_names[dimensions[1]])\n",
-    "    plt.legend()\n",
     "    plt.show()"
    ]
   },
@@ -145,6 +144,15 @@
    "outputs": [],
    "source": [
     "X, y = obtenir_iris()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape"
    ]
   },
   {
