--- a/2-arbres.ipynb
+++ b/2-arbres.ipynb
@@ -25,8 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_digits, fetch_openml"
+    "from sklearn.datasets import load_digits"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -144,8 +151,7 @@
     "    for label in np.unique(y):\n",
     "        index_label = np.where(y==label)[0]\n",
     "        size = int(ratio_test * len(index_label))\n",
-    "        replace = size < len(index_label)\n",
-    "        index += list(np.random.choice(index_label, size=size, replace=replace))\n",
+    "        index += list(np.random.choice(index_label, size=size, replace=False))\n",
     "    X_test = X[index]\n",
     "    y_test = y[index]\n",
     "    index_ = np.ones(len(y), dtype=bool)\n",
@@ -345,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "montrer_disque(X_app[feuille.index], y_app[feuille.index])"
